[gd_scene load_steps=3 format=3 uid="uid://player"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_3h04n"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3h04n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = RectangleShape2D { size = Vector2(18, 18) }

[node name="Visual" type="Node2D" parent="."]

[node name="Body" type="ColorRect" parent="Visual"]
position = Vector2(-9, -9)
size = Vector2(18, 18)
color = Color(0, 0, 0)

[node name="Eyes" type="Node2D" parent="Visual"]

[node name="EyeL" type="ColorRect" parent="Visual/Eyes"]
position = Vector2(-4, -4)
size = Vector2(3, 3)
color = Color(1, 1, 1)

[node name="EyeR" type="ColorRect" parent="Visual/Eyes"]
position = Vector2(2, -4)
size = Vector2(3, 3)
color = Color(1, 1, 1)

[node name="AttackArea" type="Area2D" parent="."]
monitoring = false
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(8, 0)
shape = RectangleShape2D { size = Vector2(16, 8) }

[node name="AttackFlash" type="AnimationPlayer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpDust" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = ParticleProcessMaterial { initial_velocity_min = 80.0, initial_velocity_max = 140.0, angle_min = -60.0, angle_max = 60.0, gravity = Vector2(0, 600) }

[node name="LandDust" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = ParticleProcessMaterial { initial_velocity_min = 60.0, initial_velocity_max = 120.0, angle_min = 120.0, angle_max = 240.0, gravity = Vector2(0, 700) }

[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
